# OpenDAL-FIO

./: Cargo.toml  README.md
src/: main.rs
src/config/: config.rs
src/execute/: metrics.rs  mod.rs  run.rs
src/generate/: data_generate.rs  mod.rs
src/util/: handle_num.rs  mod.rs
