[package]
name = "opendal-fio"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-ini = "0.21.1"
rand = "0.8.5"
clap = { version = "4.5.17", features = ["derive"] }
opendal = { version = "0.49.2", features = ["services-fs"] }
rand_distr = "0.4.3"
tokio = { version = "1.40.0", features = ["full"] }
crossbeam-channel = "0.5"
crossterm = "0.28.1"
anyhow = "1.0.87"
